--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
+app.seed-demo-data=false
+app.posts.path=data/posts.json
+app.posts.reset=true
