--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 app.seed-demo-data=false
+app.posts.path=data/posts.json
+app.posts.reset=false
+
